--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
 
   Read more
 
-  New 
+  <div class="conteinerblack">
+    <h1>New </h1>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
+    <h2>Hydrogen VS Electric Cars</h2>
+    <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      <hr>
+    <h2>The Downsides of AI Artistry</h2>
+    <p>What are the possible adverse effects of on-demand AI image generation?</p>
+     <hr>
+    <h2>Is VC Funding Drying Up?</h2>
+    <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+  
+</div>
+  
+  
   01
   Reviving Retro PCs
   What happens when old PCs are given modern upgrades?
