Barra de navegacion

--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/4eb6610ebb.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
-<body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+<body>
+  <header>
+    <nav class="nav">
+      <a href="#" class="Titulo">W.</a>
+      <button class="barra">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <ul class="menu">
+        <li class="menu-puntos"><a href="#" class="link_menu">Home</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">New</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Popular</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Trending</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Categories</a></li>
+      </ul>
+    </nav>
+  </header>
 
   The Bright Future of Web 3.0?
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
+  people.
   But is it really fulfilling its promise?
 
   Read more
 
-  New 
+  New
 
   Hydrogen VS Electric Cars
   Will hydrogen-fueled cars ever catch up to EVs?
@@ -51,10 +71,11 @@
   03
   The Growth of Gaming
   How the pandemic has sparked fresh opportunities.
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
