--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/4eb6610ebb.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | News homepage</title>
 
@@ -15,15 +19,21 @@
   </style>
 </head>
 <body>
- <!--Hola Soy Guadalupe -->
-  <!--Hola soy Ismael-->
-  <header>
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
+<header>
+    <nav class="nav">
+      <a href="#" class="Titulo">W.</a>
+      <button class="barra">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <ul class="menu">
+        <li class="menu-puntos"><a href="#" class="link_menu">Home</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">New</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Popular</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Trending</a></li>
+        <li class="menu-puntos"><a href="#" class="link_menu">Categories</a></li>
+      </ul>
+    </nav>
+  </header>
   The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
