--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
   </style>
 </head>
 <body>
-<header>
-    <nav class="nav">
+ <header>
+    
+    <nav  class="nav">
       <a href="#" class="Titulo">W.</a>
-      <button class="barra">
-        <i class="fa-solid fa-bars"></i>
-      </button>
       <ul class="menu">
         <li class="menu-puntos"><a href="#" class="link_menu">Home</a></li>
         <li class="menu-puntos"><a href="#" class="link_menu">New</a></li>
@@ -32,8 +30,26 @@
         <li class="menu-puntos"><a href="#" class="link_menu">Trending</a></li>
         <li class="menu-puntos"><a href="#" class="link_menu">Categories</a></li>
       </ul>
+      <div class="btn-menu">
+        <label for="btn-menu">☰</label>
+      </div>
     </nav>
   </header>
+
+<!--	--------------->
+<input type="checkbox" id="btn-menu">
+<div class="container-menu">
+	<div class="cont-menu">
+		<nav>
+			<a href="#">Home</a>
+			<a href="#">New</a>
+			<a href="#">Popular</a>
+			<a href="#">Trending</a>
+			<a href="#">Categories</a>
+		</nav>
+		<label for="btn-menu">✖️</label>
+	</div>
+</div>
   The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
