--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type = "image/png" sizes="32x32"herf=http://127.0.0.1:5500/<your_file_name>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/4eb6610ebb.js" crossorigin="anonymous"></script>
   
@@ -15,7 +14,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: hsl(277, 73%, 32%); }
   </style>
 </head>
 <body>
