--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   Popular
   Trending
   Categories
-
+img)
   The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
