--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 
   Read more
 
+  <aside>
   <div class="conteinerblack">
-    <h1>New </h1>
-
-    <h2>Hydrogen VS Electric Cars</h2>
-    <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-      <hr>
-    <h2>The Downsides of AI Artistry</h2>
-    <p>What are the possible adverse effects of on-demand AI image generation?</p>
-     <hr>
-    <h2>Is VC Funding Drying Up?</h2>
-    <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      <h1 style="color: gold;">New </h1>
   
-</div>
-  
+      <h2 class="white " >Hydrogen VS Electric Cars</h2>
+      <p class="pwhite">Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <hr>
+      <h2 class="white">The Downsides of AI Artistry</h2>
+      <p class="pwhite">What are the possible adverse effects of on-demand AI image generation?</p>
+       <hr>
+      <h2 class="white">Is VC Funding Drying Up?</h2>
+      <p class="pwhite">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>>
+  </aside>
   
   01
   Reviving Retro PCs
