listo ya termine mi parte

--- a/index.html
+++ b/index.html
@@ -90,21 +90,47 @@
   
   </aside>
 </main>
-   <!--Segunda Seccion Imagenes-->
+<!--Segunda Seccion Imagenes-->
   
-  
-  01
+  <div class="contenedor-imagenes">
+    
+      <img src="/assets/images/image-retro-pcs.jpg">
+      <div class="count-txt_1">
+  <h2>
+    01
+  </h2>
+  <h3>
   Reviving Retro PCs
+</h3>
+  <p>
   What happens when old PCs are given modern upgrades?
-
+</p>
+</div>
+<img src="/assets/images/image-top-laptops.jpg">
+<div class="count-txt_1">
+  <h2>
   02
+</h2>  
+  <h3>
   Top 10 Laptops of 2022
+</h3>
+  <p>
   Our best picks for various needs and budgets.
-
+</p>
+</div>
+<img src="/assets/images/image-gaming-growth.jpg">
+<div class="count-txt_1">
+  <h2>
   03
+</h2>
+  <h3>
   The Growth of Gaming
+  </h3>
+  <p>
   How the pandemic has sparked fresh opportunities.
-  
+</p>
+  </div>
+</div>	  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
